Fixes navigation alignment in DatePicker

--- a/src/components/DatePicker/_DatePicker.scss
+++ b/src/components/DatePicker/_DatePicker.scss
@@ -26,7 +26,7 @@
   // The left and right arrow buttons.
   .react-datepicker__navigation {
     &-icon {
-      top: 5px;
+      top: 2px;
       width: 0px;
       &::before {
         border-color: var(--nypl-colors-ui-border-default);
